fixed win and fail sizes on mobile

--- a/styles.css
+++ b/styles.css
@@ -291,15 +291,15 @@ img{
 }
 
 .fail h1,.win h1{
-	font-size: 7.5vw;
+	font-size: 15vw;
 }
 
 .fail h2,.win h2{
-	font-size: 2.5vw;
+	font-size: 10vw;
 }
 
 .fail h3,.win h3{
-	font-size: 2vw;
+	font-size: 7.5vw;
 }
 
 input[type=text]{
